decaf-compiler/samples/lex/badident.decaf.out

*** Error line 1.
vari.able
    ^
*** syntax error

